--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
 </head>
 <body>
   <div class=header>
+    style="background: rgb(255,200,200);"
     <h1>joji</h1>
     <div>せつめいせつめい</div>
   </div>
