--- a/index.html
+++ b/index.html
@@ -17,9 +17,8 @@
 
   <link rel="stylesheet" href="index.css"/>
 </head>
-<body>
+<body　style="background: rgb(255,200,200);">
   <div class=header>
-    style="background: rgb(255,200,200);"
     <h1>joji</h1>
     <div>せつめいせつめい</div>
   </div>
