--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
   
 <body style="background: rgb(255,200,200);">
   <div class=header>
-    <img src="sketch190828.png">
+    <img src="sketch190828.png" style="width:80vw>
     <h1>joji</h1>
     <div>せつめいせつめい</div>
   </div>
