--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
   <link rel="stylesheet" href="index.css"/>
 </head>
   
-<body background="girlheader.png">
+<body>
   <div class=header>
     <h1>joji</h1>
     <div>せつめいせつめい</div>
