--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html><html lang='ja'><meta charset='utf-8'/>
 <head>
-  <title>たいとる</title>
-  <meta property="og:title" content="たいとる" />
+  <title>joji</title>
+  <meta property="og:title" content="joji" />
   <meta property="og:description" content="せつめいせつめい" />
   <meta name="theme-color" content="#ECECF7" />
   <meta name="msapplication-TileColor" content="#ECECF7" />
