--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
   
 <body>
   <div class=header>
-    <h1>joji</h1>
+    <h2>cyan hair</h2>
     <div>せつめいせつめい</div>
   </div>
   <div class=main>
